--- a/application/admin/view/role/list.html
+++ b/application/admin/view/role/list.html
@@ -1,19 +1,16 @@
 {include file="header"}
 <section class="Hui-article-box">
-	<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 管理员管理 <span class="c-gray en">&gt;</span> 权限分类管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
+	<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 管理员管理 <span class="c-gray en">&gt;</span> 权限管理 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 		
 	<div class="Hui-article">
 		<article class="cl pd-20">
 			<div class="text-c">
-					<input type="text" placeholder="名称" value="" class="input-text" style="width:120px" id="name">
 					<input id="__token__" name="__token__" value="{$Request.token}" hidden="">
-					<input type="text" placeholder="描述" value="" class="input-text" style="width:120px" id="description">
-					<button type="button" class="btn btn-success" id="add" name="" onClick=""><i class="Hui-iconfont">&#xe600;</i> 添加</button>
+					<button type="button" class="btn btn-success" id="add" name="" onClick=""><i class="Hui-iconfont">&#xe600;</i> <a href="{:url('role/add')}">添加</a></button>
 					<span id="add_span"></span> 
 			</div>
 			<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a  onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a></span>
-			<span id='token_delete' hidden="">{$token}</span>
-
+				<span id='token_delete' hidden="">{$token}</span>
 			<span class="r">共有数据：<strong>54</strong> 条</span> </div>
 			<div class="mt-10">
 				<table class="table table-border table-bordered table-bg table-sort">
@@ -21,8 +18,8 @@
 						<tr class="text-c">
 							<th width="25"><input type="checkbox" name="" value=""></th>
 							<th width="70">ID</th>
-							<th width="120">分类名称</th>
-							<th width="120">分类描述</th>
+							<th width="120">权限名称</th>
+							<th width="120">权限描述</th>
 							<th width="100">操作</th>
 						</tr>
 					</thead>
@@ -39,15 +36,21 @@
 			<div class="modal-header">
 				<h3 class="modal-title">对话框标题</h3>
 				<a class="close" data-dismiss="modal" aria-hidden="true" href="javascript:void();">×</a>
-			</div>
 			<div class="modal-body">
+			<div class="row cl">
 				<input type="text" value="" id="up_id" hidden="">
 				<input type="text" value="" id="up_name">
 				<input type="text" value="" id="up_description">
 				<span id="up_span"></span>
 			</div>
+			<br>
+				<div class="formControls">
+				<dl class="permission-list" id="permission-list">
+				</dl>
+
+			</div>
 			<div class="modal-footer">
-				<button class="btn btn-primary" onclick="up_action()">确定</button>
+				<button class="btn btn-primary" onclick="up_action()">修改</button>
 				<button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
 			</div>
 		</div>
@@ -56,76 +59,119 @@
 </section>
 {include file="foother"}
 <script>
-	function up_action(){
+	function modaldemo(id,name,description){
+
+		$("#up_id").val(id)
+		$("#up_name").val(name)
+		$("#up_description").val(description)
+		$.ajax({
+			url:"{:url('role/mypermissionShow')}",
+			data:{
+				id:id
+			},
+			success:function(res){
+				$(".mycheckbox").prop("checked",false);
+				console.log(res.data)
+				$.each(res.data ,function(key,value){
+					console.log(value)
+					var p_id="p"+value.permission_id
+					$("#"+p_id).prop('checked',true) 
+				})
+			}
+		})
+		$("#modal-demo").modal("show")
+}
+
+		function up_action(){
 		var id=$("#up_id").val()
 		var name=$("#up_name").val()
 		var description=$("#up_description").val()
 		var __token__=$("#__token__").val()
+		var mycheckbox=$('.mycheckbox:checked')
+		var permission_id=''
+		for (var i = 0; i < mycheckbox.length; i++) {
+			permission_id=permission_id+','+mycheckbox[i].value
+		}
 		$.ajax({
-			url:"{:url('permissioncate/updateAction')}",
-			type:'post',
-			data:{
-				id:id,
-				name:name,
-				description:description,
-				__token__:__token__ 
-			},
-			dataType:'json',
+			url:"{:url('role/updateaction')}",
+				type:'post',
+				data:{
+					__token__:__token__,
+					id:id,
+					name:name,
+					description:description,
+					permission_id:permission_id,
+				},
 				success:function(res){
-					console.log(res)
-					if(res.status=='ok'){
-						$("#up_span").html()
+					getToken()
+					if (res.status=='ok') {
 						$("#modal-demo").modal("hide")
 						show()
 					}
-					if(res.status=='error'){
+					if (res.status=='error') {
 						$("#up_span").html(res.data)
 					}
-					getToken()
-			}
-		})
-	}
-		function modaldemo(id,name,description){
-		$("#up_id").val(id)
-		$("#up_name").val(name)
-		$("#up_description").val(description)
-		$("#modal-demo").modal("show")
-		}
-
-		function show(){
-			 var tr=''
-				$.ajax({
-				url:"{:url('permissioncate/show')}",
-				dataType:'json',
-				success:function(res){
-					// console.log(res)
-					for(var i = 0; i < res.length; i++){
-						tr=tr+"<tr><td><input name='' class='mycheckbox' type='checkbox' value='"+res[i].id+"'></td><td>"+res[i].id+"</td><td tid='"+res[i].id+"' tname='"+res[i].name+"'><span class='upname'>"+res[i].name+"</span></td><td>"+res[i].description+"</td><td class='f-14 product-brand-manage'><a onclick='modaldemo(\""+res[i].id+"\",\""+res[i].name+"\",\""+res[i].description+"\")' style='text-decoration:none' title='编辑'><i class='Hui-iconfont'>&#xe6df;</i></a> <a style='text-decoration:none' class='ml-5' onclick='mydelete("+res[i].id+")' title='删除'><i class='Hui-iconfont'>&#xe6e2;</i></a></td></tr>"
-					} 
-					$(".table tbody").html(tr);
 				}
 			})
-		}
-		show()
+	}
 
-		function mydelete(id){
-			var __token__=$('#token_delete').html()
+
+	function getCate(){
+		$.ajax({
+		url:'{:url("permissioncate/show")}',
+		dataType:'json',
+		success:function(res){
+			console.log(res)
+			var option=''
+			for (var i = 0; i <res.length; i++){
+				option=option+"<option value='"+res[i]['id']+"'>"+res[i]['name']+"</option>";
+			}
+			$('#category_id').html(option)
+			$('#up_category_id').html(option)
+		}
+	})
+}
+ getCate()
+
+
+
+
+function show() {
+	$.ajax({
+		url:'{:url("role/show")}',
+		success:function(res){
+			var data=res.data
+			var tr=''
+				for (var i = 0; i <data.length; i++){
+					tr=tr+"<tr><td><input class='mycheckbox' type='checkbox' value='"+data[i]['id']+"'></td><td>"+data[i]['id']+"</td><td>"+data[i]['name']+"</td><td>"+data[i]['description']+"</td><td class='f-14 product-brand-manage'><a style='text-decoration:none' onclick='modaldemo(\""+data[i]['id']+"\",\""+data[i]['name']+"\",\""+data[i]['description']+"\",\""+data[i]['path']+"\",\""+data[i]['category_id']+"\")' title='编辑'><i class='Hui-iconfont'>&#xe6df;</i>详情</a><a style='text-decoration:none' class='delete_one ml-5' value='"+data[i]['id']+"' title='删除'><i class='Hui-iconfont'>&#xe6e2;</i></a></td></tr>"	;			
+				}
+			$('.table tbody').html(tr)
+		}
+	})
+}
+show()
+
+
+	$(document).on('click','.delete_one', function(){
+			var id=$(this).attr('value')
+			var __token__ =$('#__token__').val()
 			$.ajax({
-				url:"{:url('permissioncate/delete')}",
+				url:"{:url('role/delete')}",
 				type:'post',
 				data:{
-					id:id,
 					__token__:__token__,
+					id:id,
+					
 				},
-				dataType:'json',
 				success:function(res){
-					if (res.status=='ok'){
-						$('#token_delete').html(res.token)
+					console.log(res)
+					getToken()
+					if (res.status=='ok') {
 						show()
 					}
-				} 
+				}
 			})
-		}
+		})
 
 		function datadel(){
 			var r=confirm("确定要删除吗？");
@@ -138,7 +184,7 @@
 				}
 				var __token__=$('#token_delete').html()
 				$.ajax({
-					url:"{:url('permissioncate/deleteMore')}",
+					url:"{:url('role/deleteMore')}",
 					type:'post',
 					data:{
 						id:id,
@@ -154,98 +200,52 @@
 				})
 			}
 		}
-		function getToken(){
+
+	$(document).ready(function(){
+		$('#add').click(function(){
+		var __token__=$('#__token__').val()
+		var name=$('#name').val()
+		var description=$('#description').val()
+		var path=$('#path').val()
+		var category_id=$('#category_id').val()
 			$.ajax({
-				url:"{:url('common/commonToken')}",
-				dataType:'json',
-				success:function(res){
-					$('#__token__').val(res.token)
+			url:'{:url("permission/addaction")}',
+			type:'post',
+			data:{
+				__token__:__token__,
+				name:name,
+				description:description,
+				path:path,
+				category_id:category_id,
+			},
+			success:function(res){
+				getToken()
+				console.log(res)
+				if(res.status=='ok'){
+					show()
 				}
+			}
+		}) 
+	})	
+
+});
+
+$.ajax({
+	url:'{:url("role/permissionShow")}',
+	success:function(res){
+		var data=res.data
+		// console.log(res)
+		dl=''
+		$.each(data,function( key,value ) {
+			dl=dl+"<dt><label class='' style='color:blue'><input type='checkbox' value=''>"+key+"</label></dt><dd><dl class='cl permission-list2'>"
+			// console.log(value)
+			$.each(value,function( key1,value1 ) {
+				dl=dl+"<label class=''><input type='checkbox' class='mycheckbox' id='p"+value1['id']+"' value='"+value1['id']+"'>"+value1['name']+"</label>";
 			})
-		}
-
-		$(document).ready(function(){
-			$(document).on("dblclick",".upname",function(){
-				var	name = $(this).text()
-				var input= "<input class='inputname'type='text' value='"+name+"'/>"
-				$(this).parent().html(input)
-				$(".inputname").focus();
-		})
-			$(document).on("blur",".inputname",function(){
-				var _this=$(this)
-				var _parent=$(this).parent()
-				var	name = $(this).val()
-				var	id = $(this).parent().attr('tid')
-				var description = $(this).parent().next().html()
-				var old_name = $(this).parent().attr('tname')
-				var __token__=$('#__token__').val()
-				console.log(name)
-				console.log(id)
-				console.log(description)
-				$.ajax({
-					url:"{:url('permissioncate/updateAction')}",
-					type:'post',
-					data:{
-						id:id,
-						name:name,
-						description:description,
-						__token__:__token__,
-					},
-					dataType:'json',
-						success:function(res){
-							console.log(res)
-							if(res.status=='ok'){
-								var span="<span class='upname' >"+name+"</span>"
-								_this.parent().html(span)
-								_parent.attr('tname',name)
-
-								show()
-							}
-							if(res.status=='error'){
-								var span="<span class='upname' >"+old_name+"</span>"
-								_this.parent().html(span)
-							}
-							getToken()
-						}
-					})
-				})
-
-				$("#add").click(function(){
-					var name =$('#name').val()
-					var description=$('#description').val()
-					var __token__=$('#__token__').val()
-
-
-					$.ajax({
-						url:"{:url('permissioncate/addAction')}",
-						type:'post',
-						data:{
-							name:name,
-							description:description,
-							__token__:__token__,
-							
-						},
-						dataType:'json',
-						success:function(res){
-							console.log(res)
-							if (res.status=='ok') {
-								$("#add_span").html(res.data);
-								$("#add_span").css("color",'green');
-								$("#name").val('');
-								$("#description").val('')
-								setTimeout(function(){
-									$("#add_span").html();
-								},3000);
-								show()
-							}
-							if (res.status=='error') {
-								// alert(res.data);
-								$("#add_span").html(res.data);
-								$("#add_span").css("color",'red');
-							}
-							getToken()
-						}
-					})
-				})
-		});
+			dl=dl+"</dd>";
+		}); 
+			// console.log(dl)
+			$('#permission-list').html(dl)
+	}
+}) 
 </script>
