--- a/application/admin/view/permission/list.html
+++ b/application/admin/view/permission/list.html
@@ -140,13 +140,18 @@ function show() {
 	$.ajax({
 		url:'{:url("permission/show")}',
 		success:function(res){
-			var data=res.data
+			if (res.status=='error') {
+				altar('没有权限')
+			}else{
+				var data=res.data
 			var tr=''
 				for (var i = 0; i <data.length; i++){
 					tr=tr+"<tr><td><input class='mycheckbox' type='checkbox' value='"+data[i]['id']+"'></td><td>"+data[i]['id']+"</td><td>"+data[i]['name']+"</td><td>"+data[i]['description']+"</td><td>"+data[i]['path']+"</td><td>"+data[i]['p_c_name']+"</td><td class='f-14 product-brand-manage'><a style='text-decoration:none' onclick='modaldemo(\""+data[i]['id']+"\",\""+data[i]['name']+"\",\""+data[i]['description']+"\",\""+data[i]['path']+"\",\""+data[i]['category_id']+"\")' title='编辑'><i class='Hui-iconfont'>&#xe6df;</i></a> <a style='text-decoration:none' class='delete_one ml-5' value='"+data[i]['id']+"' title='删除'><i class='Hui-iconfont'>&#xe6e2;</i></a></td></tr>"	;			
 				}
 			$('.table tbody').html(tr)
 		}
+			}
+			
 	})
 }
 show()
